# mybot_control

./: README.md
mybot_control/: CMakeLists.txt  package.xml
mybot_controllers/mecanum_drive_controller/: CMakeLists.txt  README.md  mecanum_drive_controller_plugins.xml  package.xml
mybot_controllers/mecanum_drive_controller/cfg/: MecanumDriveController.cfg
mybot_controllers/mecanum_drive_controller/include/mecanum_drive_controller/: mecanum_drive_controller.h  odometry.h  speed_limiter.h
mybot_controllers/mecanum_drive_controller/src/: mecanum_drive_controller.cpp  odometry.cpp  speed_limiter.cpp
mybot_description/: CMakeLists.txt  package.xml
mybot_description/common_model/: camera.urdf.xacro  inertial.urdf.xacro  laser.urdf.xacro
mybot_description/common_model/sensor/: sensors_laser.urdf.xacro  sensors_laser_3d.urdf.xacro
mybot_description/diffbot_description/launch/: gazebo_control_diffbot.launch  gazeo_diffbot_control.launch  view_diffbot_model.launch
mybot_description/diffbot_description/urdf/: diffbot.urdf.xacro  diffbot_base.urdf.xacro  diffbot_move_sim.urdf.xacro  diffbot_sim.urdf.xacro  diffbot_sim_gazebo_control.urdf.xacro
mybot_description/diffbot_description/urdf/plugin/: gazebo_diff_drive.urdf.xacro  gazebo_ros_control.urdf.xacro
mybot_description/mecanumbot_description/cfg/: ctrl.yaml
mybot_description/mecanumbot_description/launch/: gazebo_mecanumbot_sim.launch  view_mecanumbot_model.launch
mybot_description/mecanumbot_description/urdf/: mecanumbot.urdf.xacro  mecanumbot_base.urdf.xacro  mecanumbot_sim.urdf.xacro
mybot_description/mecanumbot_description/urdf/plugin/: gazebo_ros_control.urdf.xacro
mybot_hw/: CMakeLists.txt  package.xml
mybot_hw/include/diffbot_hw/: diffbot_hw_real.h
mybot_hw/include/mecanumbot_hw/: mecanumbot_hw_real.h
mybot_hw/include/mybot_hw/: mybot_hw.h
mybot_hw/src/diffbot_hw/: diffbot_hw_real.cpp  diffbot_hw_real_node.cpp
mybot_hw/src/mecanumbot_hw/: mecanumbot_hw_real.cpp  mecanumbot_hw_real_node.cpp
mybot_launch/: CMakeLists.txt  package.xml
mybot_launch/config/diffbot/: diffbot_controllers.yaml  diffbot_hw.yaml
mybot_launch/config/mecanumbot/: mecanumbot_controllers.yaml  mecanumbot_hw.yaml
mybot_launch/launch/: rosserial.launch
mybot_launch/launch/diffbot_launch/: diffbot_driver.launch.xml  diffbot_gazebo_sim.launch  diffbot_hw.launch.xml  diffbot_real.launch  diffbot_sim.launch  diffbot_sim_driver.launch.xml
mybot_launch/launch/mecanumbot_launch/: mecanumbot_driver.launch.xml  mecanumbot_hw.launch.xml  mecanumbot_real.launch
mybot_test/: CMakeLists.txt  package.xml
mybot_test/cfg/: CalibrateAngular.cfg  CalibrateLinear.cfg
mybot_test/config/: calibrate_angular.yaml  calibrate_linear.yaml
mybot_test/launch/: calibrate_angular.launch  calibrate_linear.launch
mybot_test/scripts/: calibrate_angular.py  calibrate_linear.py  nav_square.py  odom_out_and_back.py
