<package format="2">
  <name>mecanum_drive_controller</name>
  <version>0.0.1</version>
  <description>Controller for a mecanum drive mobile base.</description>
  <license>NULL</license>
  <maintainer email="asta@todo.com">xuqc</maintainer>
  <author email="xuqc@todo.com">xuqc</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>controller_interface</depend>
  <depend>control_msgs</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>nav_msgs</depend>
  <depend>realtime_tools</depend>
  <depend>tf</depend>
  <depend>urdf</depend>
  <depend>pluginlib</depend>

  <test_depend>controller_manager</test_depend>
  <test_depend>rosgraph_msgs</test_depend>
  <test_depend>rostest</test_depend>
  <test_depend>std_srvs</test_depend>
  <test_depend>xacro</test_depend>

  <export>
    <controller_interface plugin="${prefix}/mecanum_drive_controller_plugins.xml"/>
  </export>
</package>
